[metadata]
name = pas-timed-tasks
description = Python Application Services: Abstract time based task scheduler
long_description = "pas-timed-tasks" provides an abstract time based scheduler.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = GPL-2.0+
url = https://www.direct-netware.de/redirect?pas;timed_tasks
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
